# weather-alerts

./: Cargo.toml  README.md  TESTING_GUIDE.MD  deploy.sh
src/: config.rs  db.rs  email.rs  error.rs  handlers.rs  jobs.rs  main.rs  models.rs  tests.rs  weather.rs
