[package]
name = "weather-alert-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-files = "0.6"
actix-rt = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (PostgreSQL)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono"
] }

# Logging
env_logger = "0.10"
log = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenv = "0.15"

# Error Handling
thiserror = "1.0"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Email Client
lettre = { version = "0.10", features = ["smtp-transport", "tokio1_rustls"] }

# HTTP Client for Weather API
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# --- THIS SECTION SHOULD BE REMOVED ---
# [dev-dependencies]
# actix-web = { version = "4", features = ["test-util"] }